@@ -197,7 +197,6 @@ public class ChangeGroup extends AbstractActionGroup
         Register register = CommandGroups.getInstance().getRegister().getRegister(key);
         if (register != null)
         {
-            // TODO - update when registers store Character and AnAction
             String text = register.getText();
             for (int i = 0; i < text.length(); i++)
             {
@@ -363,7 +362,7 @@ public class ChangeGroup extends AbstractActionGroup
      */
     public void processEscape(Editor editor, DataContext context)
     {
-        // TODO - register '.' needs to get text of insert foo
+        // TODO - register '.' needs to get text of insert
         logger.debug("processing escape");
         int cnt = lastInsert.getCount();
         // Turn off overwrite mode if we were in replace mode
