@@ -245,6 +245,9 @@ tag             char          note action in Normal mode        ~
                                    insert text, repeat N times
 |p|             ["x]p           2  put the text [from register x] after the
                                    cursor N times
+|q|             q{0-9a-zA-Z"}      record typed characters into named register
+                                   {0-9a-zA-Z"} (uppercase to append)
+|q|             q                  (while recording) stops recording
 |r|             r{char}         2  replace N chars with {char}
 |s|             ["x]s           2  (substitute) delete N characters [into
                                    buffer x] and start insert
